--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "backendcoder",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -16,5 +15,6 @@
   "bugs": {
     "url": "https://github.com/ElSonoSapiens/BackEndCoder/issues"
   },
-  "homepage": "https://github.com/ElSonoSapiens/BackEndCoder#readme"
+  "homepage": "https://github.com/ElSonoSapiens/BackEndCoder#readme",
+  "description": ""
 }
