--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "backendcoder",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -16,5 +17,9 @@
     "url": "https://github.com/ElSonoSapiens/BackEndCoder/issues"
   },
   "homepage": "https://github.com/ElSonoSapiens/BackEndCoder#readme",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "express": "^4.18.2",
+    "nodemon": "^2.0.21"
+  }
 }
