--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "clase07_revisada",
+  "name": "Desafio 03 - DiegoHernandez",
   "version": "1.0.0",
   "description": "",
   "type":"module",
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "Diego Hernandez",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2"
