--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "Desafio 03 - Diego Hernandez",
+  "name": "Primer Entrega - Proyecto Final",
   "version": "1.0.0",
   "description": "",
   "type":"module",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon ./src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
