--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "Primer Entrega - Proyecto Final",
   "version": "1.0.0",
   "description": "",
-  "type":"module",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "start": "nodemon ./src/app.js",
@@ -12,6 +12,7 @@
   "author": "Diego Hernandez",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "nodemon": "^2.0.21"
   }
 }
